# SuperGenshin

./: .gitignore  CMakeLists.txt  README.md  SuperGenshin.pro  brick.cpp  brick.h  castle.cpp  castle.h  dynamiccoin.cpp  dynamiccoin.h  dynamicobject.cpp  dynamicobject.h  enemy.cpp  enemy.h  fireball.cpp  fireball.h  flag.cpp  flag.h  flagpole.cpp  flagpole.h  flower.cpp  flower.h  gameobject.cpp  gameobject.h  helpscene.cpp  helpscene.h  main.cpp  mainscene.cpp  mainscene.h  mushroom.cpp  mushroom.h  mypushbutton.cpp  mypushbutton.h  pipe.cpp  pipe.h  piranhaplant.cpp  piranhaplant.h  player.cpp  player.h  playscene.cpp  (+8 more)
